<resources>
  <string name="app_name">Speed Dialer</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">ovsoc@daum.net</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_guide">Guide</string>
  <string name="home_add_btn">Add group</string>
  <string name="dialog_home_add_hint">Add group</string>
  <string name="add_dialog_name_hint">Input name</string>
  <string name="add_dialog_no_hint">Input phone number</string>
  <string name="group_dialog_hint">Input group name</string>
  <string name="add_no_dialog_get_no">Import contacts</string>
  <string name="add_no_dialog_sms">SMS</string>
  <string name="all_home_edit_group">Edit group name</string>
  <string name="all_tab_del">Delete group</string>
  <string name="permission_not_granted_msg">You need to allow permission to make calls.</string>
  <string name="go_to_settings">Go Settings</string>
  <string name="end">Exit</string>
  <string name="all_delete_contact">Delete contacts</string>
  <string name="guide_desc4">Long tap, you can make a phone call.</string>
  <string name="guide_sample_name">Peter</string>
  <string name="guide_desc3">Tap to edit your contacts.</string>
  <string name="guide_desc2">You can add contacts.</string>
  <string name="guide_desc1">You can add groups.</string>
  <string name="quit_app">Quit</string>
  <string name="leave_review">Review</string>
    <string name="menu_open_licenses">Opensource Licenses</string>
</resources>
